# KiwiWiki

./: .gitignore  AGENT_DESIGN.MD  CLAUDE.md  README.md  RESEARCH_WORKFLOW.md  RUNBOOK.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_trace_events.py
backend/app/: main.py
backend/app/api/: audit.py  health.py  insights.py  presentations.py  projects.py  reports.py  runs.py  sources.py  ws.py
backend/app/core/: config.py  constants.py  errors.py  logging.py
backend/app/db/: base.py  session.py
backend/app/events/: bus.py  publisher.py  types.py
backend/app/orchestrator/: budget.py  escalation.py  handler.py  registry.py  runner.py  state_machine.py
backend/app/schemas/: analysis.py  audit.py  common.py  comparison.py  gap.py  insights.py  presentation.py  projects.py  report.py  runs.py  scoping.py  search.py  sources.py
backend/app/services/: audit.py  citations.py  exports.py  projects.py  provenance.py  trace.py
backend/eval/: __init__.py  run.py  scorecard.py  world.py
backend/scripts/: seed.py  smoke_test.py
backend/tests/: conftest.py  llm_fakes.py  orchestrator_utils.py  report_utils.py  stage_utils.py  test_analysis_handler.py  test_backpressure.py  test_budget.py  test_comparison_handler.py  test_eval_scorecard.py  test_export.py  test_export_bundle.py  test_gap_handler.py  test_global_ceiling.py  test_input_safety.py  test_library_api.py  test_llm_client.py  test_outputs_api.py  test_phase5_pipeline.py  test_presentation_handler.py  test_projects_api.py  test_provenance.py  test_report_handler.py  test_runner.py  test_runs_api.py  test_scoping.py  test_search_handler.py  test_source_router.py  test_sources_live.py  test_state_machine.py  test_trace.py  test_ws.py
frontend/: README.md  (+4 more)
(+144 files in other folders)
