[project]
name = "research-agent-backend"
version = "0.1.0"
description = "Autonomous Research Agent — backend (Phase 0 foundation)"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.92.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgvector>=0.3",
    "redis>=5.0",
    "greenlet>=3.0",
    "httpx>=0.27",
    "python-docx>=1.1",
    "python-pptx>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "aiosqlite>=0.20",
    "ruff>=0.6",
    "black>=24.0",
    "mypy>=1.11",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = [
    "B008",   # FastAPI uses function calls (Depends) in argument defaults.
    "UP042",  # (str, Enum) is intentional; StrEnum's str/format differ and values are persisted.
]

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = '/(\.venv|alembic/versions)/'

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
# Strict on the core modules per the plan; the rest is checked but lenient.
[[tool.mypy.overrides]]
module = ["app.core.*", "app.services.*", "app.adapters.*", "app.orchestrator.*"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["pgvector.*", "anthropic.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
